--- a/app/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/app/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -9,16 +9,17 @@
   <ItemGroup>
     <PackageReference Include="ILGPU" Version="0.3.0" />
     <!--PackageReference Include="ILLink.Tasks" Version="0.1.5-preview-1461378" /-->
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0"></PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5"></PackageReference>
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.2.1" />
-    <PackageReference Include="MongoDB.Driver" Version="2.6.1" />
+    <PackageReference Include="CommandLineParser" Version="2.3.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="ServiceStack.Text" Version="5.1.0" />
+    <PackageReference Include="ServiceStack.Text" Version="5.4.0" />
+    <PackageReference Include="ShellProgressBar" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
